--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ Barra de navegação
 #conteudo {
     width: 710px;
     float: left;
-    background: green;
+    margin-bottom: 20px;
 }
 
 aside {
@@ -82,12 +82,44 @@ aside {
     float: right;
     background: #ebe7dd;
     padding-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 section#visita {
     background: #cdc8b1;
     padding: 10px 27px 27px 27px;
     margin-top: 10px;
+}
+
+article#video {
+    float: left;
+    width: 310px;
+    margin-left: 25px;
+}
+
+article#mapa {
+    float: left;
+    width: 310px;
+    margin-left: 37px;
+}
+
+article#exposicoes {
+    float: left;
+    width: 310px;
+    margin: 15px 0 0 25px;
+}
+
+article#historia {
+    float: left;
+    width: 310px;
+    margin: 15px 0 0 37px;
+}
+
+h3 {
+    color: #227115;
+    font-size: 1.0em;
+    margin-bottom: 15px;
+    text-transform: uppercase;
 }
 
 h4 {
@@ -112,6 +144,22 @@ section#galeria a {
 section#galeria img {
     margin-left: 2px;
     margin-top: 3px;
+}
+
+/*
+Rodapé
+-----------------------------------------------------------------------------------
+*/
+footer {
+    clear: both;
+    padding: 20px 0 30px 0;
+    text-align: center;
+    background: url(../images/fundo-rodape.png) no-repeat center top;
+    margin-top: 20 px;
+}
+
+footer>p a {
+    padding: 2px 10px;
 }
 
 /*
